# ETH-programming-for-robotics-ROS

./: README.md
husky_highlevel_controller/: CMakeLists.txt  package.xml
husky_highlevel_controller/config/: config.yaml
husky_highlevel_controller/include/husky_highlevel_controller/: HuskyHighlevelController.hpp
husky_highlevel_controller/launch/: husky_ekf_bag.launch  husky_highlevel_controller.launch
husky_highlevel_controller/src/: HuskyHighlevelController.cpp  emergency_stop_client.cpp  emergency_stop_server.cpp
